Added api calls for refDataSource and refDataSourceType and updated swagger
